Added story detail page UI components.

--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -517,6 +517,14 @@
                         <input type="text" id="editTitle" class="form-control" required>
                     </div>
                     <div class="mb-3">
+                        <label class="form-label">Cover Picture</label>
+                        <input type="file" id="coverPicture" class="form-control" accept="image/*">
+                        <small class="text-muted">Upload a JPG, PNG, or GIF image.</small>
+                        <img id="coverPreview" src="" alt="Cover Preview" style="margin-top:10px; max-width:100%; border-radius:12px; display:none;">
+                    </div>
+
+
+                    <div class="mb-3">
                         <label class="form-label">Content</label>
                         <textarea id="editContent" class="form-control" rows="8" required></textarea>
                     </div>
@@ -531,335 +539,6 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<script>
-    document.addEventListener("DOMContentLoaded", async () => {
-        const urlParams = new URLSearchParams(window.location.search);
-        const postId = urlParams.get("id");
-        const token = sessionStorage.getItem("jwtToken");
-
-        if (!postId) {
-            document.getElementById("storyTitle").textContent = "⚠️ Story not found";
-            return;
-        }
-
-        // DOM Elements
-        const titleEl = document.getElementById("storyTitle");
-        const authorNameEl = document.getElementById("authorName");
-        const authorTitleEl = document.getElementById("authorTitle");
-        const authorImageEl = document.getElementById("authorImage");
-        const readingTimeEl = document.getElementById("readingTime");
-        const viewCountEl = document.getElementById("viewCount");
-        const publishDateEl = document.getElementById("publishDate");
-        const storyImageEl = document.getElementById("storyImage");
-        const contentEl = document.getElementById("storyContent");
-        const actionsEl = document.getElementById("story-actions");
-
-        const boostBtn = document.getElementById("boostBtn");
-        const boostCountEl = document.getElementById("boostCount");
-        const likeBtn = document.getElementById("likeBtn");
-        const likeCountEl = document.getElementById("likeCount");
-        const commentsList = document.getElementById("commentsList");
-        const commentsCountEl = document.getElementById("commentsCount");
-        const commentInput = document.getElementById("commentInput");
-        const addCommentBtn = document.getElementById("addCommentBtn");
-        const bookmarkBtn = document.getElementById("bookmarkBtn");
-
-        if (!token) {
-            titleEl.textContent = "⚠️ Please log in to view the story.";
-            return;
-        }
-
-        let currentPost = null;
-        let isLiked = false;
-        let isBookmarked = false;
-
-        try {
-            // ========================
-            // Fetch Post
-            // ========================
-            const res = await fetch(`http://localhost:8080/api/v1/dashboard/post/${postId}`, {
-                headers: {
-                    "Authorization": `Bearer ${token}`,
-                    "Content-Type": "application/json"
-                }
-            });
-
-            if (!res.ok) throw new Error("Failed to fetch post");
-
-            const data = await res.json();
-            const post = data.data;
-            console.log(post);
-            currentPost = post;
-
-            // Render post
-            titleEl.textContent = post.title || "Untitled";
-            authorNameEl.textContent = post.username || "Unknown";
-            publishDateEl.textContent = new Date(post.publishedAt).toLocaleDateString();
-
-            // Calculate reading time (approx 200 words per minute)
-            const wordCount = post.content ? post.content.split(/\s+/).length : 0;
-            const readingTime = Math.max(1, Math.round(wordCount / 200));
-            readingTimeEl.textContent = readingTime;
-
-            // Set view count if available
-            if (post.viewCount !== undefined) {
-                viewCountEl.textContent = post.viewCount >= 1000
-                    ? `${(post.viewCount / 1000).toFixed(1)}k`
-                    : post.viewCount;
-            }
-
-            // Set content - preserving any HTML formatting
-            if (post.content) {
-                contentEl.innerHTML = post.content;
-            } else {
-                contentEl.textContent = "No content available.";
-            }
-
-            // Set boost count
-            boostCountEl.textContent = post.boostCount || 0;
-
-            // Set like count
-            likeCountEl.textContent = post.likeCount || 0;
-
-            // Show edit/delete if author
-            const loggedInUser = sessionStorage.getItem("username");
-            if (loggedInUser && loggedInUser === post.username) {
-                const editBtn = document.createElement("button");
-                editBtn.className = "action-btn edit-btn";
-                editBtn.innerHTML = '<i class="fas fa-edit"></i> Edit';
-                editBtn.setAttribute("data-bs-toggle", "modal");
-                editBtn.setAttribute("data-bs-target", "#editModal");
-
-                const deleteBtn = document.createElement("button");
-                deleteBtn.className = "action-btn delete-btn";
-                deleteBtn.innerHTML = '<i class="fas fa-trash"></i> Delete';
-                deleteBtn.onclick = async () => {
-                    if (confirm("Are you sure you want to delete this post?")) {
-                        try {
-                            const delRes = await fetch(`http://localhost:8080/api/v1/post/delete/${postId}`, {
-                                method: "DELETE",
-                                headers: { "Authorization": `Bearer ${token}` }
-                            });
-
-                            if (delRes.ok) {
-                                alert("✅ Post deleted successfully!");
-                                window.location.href = "dashboard.html";
-                            } else {
-                                const errData = await delRes.json().catch(() => ({}));
-                                alert(`❌ ${errData.message || delRes.status}`);
-                            }
-                        } catch (err) {
-                            console.error(err);
-                            alert("⚠️ Error deleting post");
-                        }
-                    }
-                };
-
-                actionsEl.appendChild(editBtn);
-                actionsEl.appendChild(deleteBtn);
-            }
-
-            // Prefill modal
-            const editTitle = document.getElementById("editTitle");
-            const editContent = document.getElementById("editContent");
-            editTitle.value = post.title;
-            editContent.value = post.content;
-
-            // Handle edit
-            const editForm = document.getElementById("editForm");
-            editForm.addEventListener("submit", async (e) => {
-                e.preventDefault();
-                try {
-                    const updateRes = await fetch(`http://localhost:8080/api/v1/post/edit/${postId}`, {
-                        method: "PUT",
-                        headers: {
-                            "Authorization": `Bearer ${token}`,
-                            "Content-Type": "application/json"
-                        },
-                        body: JSON.stringify({
-                            title: editTitle.value,
-                            content: editContent.value
-                        })
-                    });
-
-                    if (updateRes.ok) {
-                        alert("✅ Post updated successfully!");
-                        location.reload();
-                    } else {
-                        const errData = await updateRes.json().catch(() => ({}));
-                        alert(`❌ ${errData.message || updateRes.status}`);
-                    }
-                } catch (err) {
-                    console.error(err);
-                    alert("⚠️ Error updating post");
-                }
-            });
-
-            // ========================
-            // Load comments
-            // ========================
-            await loadComments();
-
-            // ========================
-            // Boost handler
-            // ========================
-            boostBtn.addEventListener("click", async () => {
-                try {
-                    const res = await fetch(`http://localhost:8080/api/v1/boost/${postId}`, {
-                        method: "POST",
-                        headers: {
-                            "Authorization": `Bearer ${token}`,
-                            "Content-Type": "application/json"
-                        }
-                    });
-
-                    if (res.ok) {
-                        const result = await res.json();
-                        boostCountEl.textContent = result.data;
-                        boostBtn.classList.add("active");
-                        boostBtn.disabled = true;
-                    } else {
-                        console.error("Boost failed with status:", res.status);
-                    }
-                } catch (err) {
-                    console.error("Boost failed:", err);
-                }
-            });
-
-            // ========================
-            // Add comment
-            // ========================
-            addCommentBtn.addEventListener("click", async () => {
-                const content = commentInput.value.trim();
-                if (!content) return;
-
-                try {
-                    const res = await fetch(`http://localhost:8080/api/v1/comment/${postId}`, {
-                        method: "POST",
-                        headers: {
-                            "Authorization": `Bearer ${token}`,
-                            "Content-Type": "application/json"
-                        },
-                        body: JSON.stringify({ content: content })
-                    });
-
-                    if (res.ok) {
-                        commentInput.value = "";
-                        await loadComments();
-                    } else {
-                        console.error("Failed to add comment:", res.status);
-                    }
-                } catch (err) {
-                    console.error("Add comment failed:", err);
-                }
-            });
-
-            // ========================
-            // Like handler
-            // ========================
-            likeBtn.addEventListener("click", async () => {
-                try {
-                    const res = await fetch(`http://localhost:8080/api/v1/like/${postId}`, {
-                        method: "POST",
-                        headers: {
-                            "Authorization": `Bearer ${token}`,
-                            "Content-Type": "application/json"
-                        }
-                    });
-
-                    if (res.ok) {
-                        const result = await res.json();
-                        isLiked = !isLiked;
-                        likeCountEl.textContent = result.data;
-
-                        if (isLiked) {
-                            likeBtn.classList.add('active');
-                            likeBtn.querySelector('i').classList.replace('far', 'fas');
-                        } else {
-                            likeBtn.classList.remove('active');
-                            likeBtn.querySelector('i').classList.replace('fas', 'far');
-                        }
-                    }
-                } catch (err) {
-                    console.error("Like action failed:", err);
-                }
-            });
-
-            // ========================
-            // Bookmark handler
-            // ========================
-            bookmarkBtn.addEventListener("click", async () => {
-                try {
-                    const res = await fetch(`http://localhost:8080/api/v1/bookmark/${postId}`, {
-                        method: "POST",
-                        headers: {
-                            "Authorization": `Bearer ${token}`,
-                            "Content-Type": "application/json"
-                        }
-                    });
-
-                    if (res.ok) {
-                        isBookmarked = !isBookmarked;
-
-                        if (isBookmarked) {
-                            bookmarkBtn.classList.add('active');
-                            bookmarkBtn.querySelector('i').classList.replace('far', 'fas');
-                            bookmarkBtn.innerHTML = '<i class="fas fa-bookmark"></i> Saved';
-                        } else {
-                            bookmarkBtn.classList.remove('active');
-                            bookmarkBtn.querySelector('i').classList.replace('fas', 'far');
-                            bookmarkBtn.innerHTML = '<i class="far fa-bookmark"></i> Save';
-                        }
-                    }
-                } catch (err) {
-                    console.error("Bookmark action failed:", err);
-                }
-            });
-
-            // ========================
-            // Function: Load comments
-            // ========================
-            async function loadComments() {
-                try {
-                    const res = await fetch(`http://localhost:8080/api/v1/comment/${postId}`);
-                    const data = await res.json();
-                    console.log("Comments data:", data);
-
-                    if (data.data && data.data.length) {
-                        commentsList.innerHTML = data.data.map(comment => `
-                            <div class="comment">
-                                <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=200&q=80" alt="Commenter">
-                                <div class="comment-content">
-                                    <div class="comment-header">
-                                        <div class="fw-semibold">${comment.userId || 'Anonymous'}</div>
-                                        <div class="small text-light">${new Date(comment.createdAt).toLocaleDateString()}</div>
-                                    </div>
-                                    <p>${comment.content}</p>
-                                    <div class="comment-actions">
-                                        <a class="comment-action like-comment"><i class="far fa-heart"></i> <span>${comment.likes || 0}</span></a>
-                                        <a class="comment-action reply-comment">Reply</a>
-                                    </div>
-                                </div>
-                            </div>
-                        `).join("");
-
-                        commentsCountEl.textContent = data.data.length;
-                    } else {
-                        commentsList.innerHTML = "<div class='text-center py-3 text-muted'>No comments yet. Be the first to comment!</div>";
-                        commentsCountEl.textContent = "0";
-                    }
-                } catch (err) {
-                    console.error("Load comments failed", err);
-                    commentsList.innerHTML = "<div class='text-center py-3 text-muted'>Error loading comments</div>";
-                }
-            }
-
-        } catch (err) {
-            console.error("Failed to load post:", err);
-            titleEl.textContent = "⚠️ Error loading story.";
-        }
-    });
-</script>
+<script src="../js/story-details.js"></script>
 </body>
 </html>
