--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -27,7 +27,7 @@
 
         <a href="#"><i class="fas fa-home me-1"></i> Home</a>
         <a href="#"><i class="fas fa-bell me-1"></i> Notifications</a>
-        <a href="#"><i class="fas fa-pen me-1"></i> Write</a>
+        <a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a>
 
 
         <!-- User Profile Menu -->
