Updated navigation links to use relative paths in Bloggo frontend.

--- a/BloggoFrontend/index.html
+++ b/BloggoFrontend/index.html
@@ -32,7 +32,7 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav ms-auto align-items-center">
-                    <a class="nav-link me-3" href="#explore">Explore</a>
+                    <a class="nav-link me-3" href="./pages/signup.html">Explore</a>
                     <a class="nav-link me-3" href="#pricing">Pricing</a>
                     <a class="btn btn-outline-secondary me-2" id="login-btn" href="pages/signing.html">Log in</a>
                     <a class="btn btn-primary" id="signup-btn" href="pages/signup.html">Start Writing</a>
