--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -25,8 +25,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a href="#"><i class="fas fa-home me-1"></i> Home</a>
-        <a href="#"><i class="fas fa-bell me-1"></i> Notifications</a>
+        <a href="dashboard.html"><i class="fas fa-home me-1"></i> Home</a>
+        <a href="notification.html"><i class="fas fa-bell me-1"></i> Notifications</a>
         <a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a>
 
 
@@ -37,7 +37,7 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                 <li>
-                    <a class="dropdown-item" href="profile.html">
+                    <a class="dropdown-item" href="stories.html">
                         <i class="fas fa-user me-2"></i> Profile
                     </a>
                 </li>
