--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -22,9 +22,9 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a href="#"><i class="fas fa-home me-1"></i> Home</a>
-        <a href="#"><i class="fas fa-bell me-1"></i> Notifications</a>
-        <a href="#"><i class="fas fa-pen me-1"></i> Write</a>
+        <a href="dashboard.html"><i class="fas fa-home me-1"></i> Home</a>
+        <a href="notification.html"><i class="fas fa-bell me-1"></i> Notifications</a>
+        <a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a>
 
 
         <!-- User Profile Menu -->
@@ -34,7 +34,7 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                 <li>
-                    <a class="dropdown-item" href="profile.html">
+                    <a class="dropdown-item" href="stories.html">
                         <i class="fas fa-user me-2"></i> Profile
                     </a>
                 </li>
