Updated navigation links to use relative paths in Bloggo frontend.

--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -68,8 +68,19 @@
     </nav>
 </header>
 
+<!-- Search Section -->
+<section class="search-section mb-8">
+    <div class="input-group shadow-sm rounded-pill">
+            <span class="input-group-text bg-white border-0 rounded-start-pill">
+                <i class="fas fa-search text-muted"></i>
+            </span>
+        <input type="text" class="form-control border-0 rounded-end-pill" placeholder="Search blogs, tags, or people...">
+    </div>
+</section>
 
 <main class="container dashboard">
+
+
     <!-- Sidebar -->
     <aside class="sidebar">
         <a href="dashboard.html">🏠 Home</a>
@@ -82,7 +93,7 @@
 
     <!-- Feed -->
     <section class="feed">
-        <article class="blog-card">
+       <!-- <article class="blog-card">
             <h3>Designing Minimal UIs for Focused Reading</h3>
             <p>A deep dive into how minimalism improves content engagement…</p>
             <div class="blog-meta">
@@ -105,7 +116,7 @@
                 <span>by Chris Wong</span>
                 <span>🚀 210 · 💬 67</span>
             </div>
-        </article>
+        </article>-->
     </section>
 
     <aside class="rightbar">
