--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -388,7 +388,7 @@
         <a href="dashboard.html"><i class="fas fa-home me-1"></i> Home</a>
         <a href="stories.html"><i class="fas fa-book-open me-1"></i> Stories</a>
         <a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a>
-        <!--<a href="profile.html"><i class="fas fa-user me-1"></i> Profile</a>-->
+        <a href="profile.html"><i class="fas fa-user me-1"></i> Profile</a>
 
         <!-- User Profile Menu -->
         <div class="dropdown profile-menu ms-auto">
