--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <link href="../css/profile.css" rel="stylesheet">
+    <link href="../css/follow.css" rel="stylesheet">
 </head>
 <body>
 
@@ -139,6 +139,7 @@
     </div>
 </div>
 
+<script src="../js/follow.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
