--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -131,5 +131,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../js/notification.js"> </script>
 </body>
 </html>
