--- a/BloggoFrontend/pages/blog-editor.html
+++ b/BloggoFrontend/pages/blog-editor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Editor | Bloggo</title>
+    <title>Blog Editor</title>
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -39,8 +39,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="stories.html">
-                        <i class="fas fa-pen-nib me-2"></i> Stories
+                    <a class="dropdown-item" href="saved-bookmarks.html">
+                        <i class="fas fa-bookmark me-2"></i> My Library
                     </a>
                 </li>
                 <li>
@@ -55,7 +55,7 @@
                 </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
-                    <a class="dropdown-item text-danger" href="logout.html">
+                    <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
                         <i class="fas fa-sign-out-alt me-2"></i> Logout
                     </a>
                 </li>
