--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bloggo — Dashboard</title>
+    <title>Dashboard</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -42,8 +42,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="stories.html">
-                        <i class="fas fa-pen-nib me-2"></i> Stories
+                    <a class="dropdown-item" href="saved-bookmarks.html">
+                        <i class="fas fa-bookmark me-2"></i> My Library
                     </a>
                 </li>
                 <li>
@@ -58,7 +58,7 @@
                 </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
-                    <a class="dropdown-item text-danger" href="logout.html">
+                    <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
                         <i class="fas fa-sign-out-alt me-2"></i> Logout
                     </a>
                 </li>
@@ -145,5 +145,6 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/dashboard.js"></script>
+
 </body>
 </html>
