--- a/BloggoFrontend/pages/payment.html
+++ b/BloggoFrontend/pages/payment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bloggo-Payment</title>
+    <title>Payment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -38,8 +38,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="stories.html">
-                        <i class="fas fa-pen-nib me-2"></i> Stories
+                    <a class="dropdown-item" href="saved-bookmarks.html">
+                        <i class="fas fa-bookmark me-2"></i> My Library
                     </a>
                 </li>
                 <li>
@@ -54,7 +54,7 @@
                 </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
-                    <a class="dropdown-item text-danger" href="logout.html">
+                    <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
                         <i class="fas fa-sign-out-alt me-2"></i> Logout
                     </a>
                 </li>
@@ -90,6 +90,7 @@
 <div class="container text-center mb-5">
     <p class="text-muted">Secure checkout process — your data is protected 🔒</p>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script src="../js/payment.js"></script>
 <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=USD"></script>
