--- a/BloggoFrontend/pages/settings.html
+++ b/BloggoFrontend/pages/settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bloggo - Settings</title>
+    <title>Settings</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -40,8 +40,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="stories.html">
-                        <i class="fas fa-pen-nib me-2"></i> Stories
+                    <a class="dropdown-item" href="saved-bookmarks.html">
+                        <i class="fas fa-bookmark me-2"></i> My Library
                     </a>
                 </li>
                 <li>
@@ -56,7 +56,7 @@
                 </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
-                    <a class="dropdown-item text-danger" href="logout.html">
+                    <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
                         <i class="fas fa-sign-out-alt me-2"></i> Logout
                     </a>
                 </li>
@@ -146,6 +146,7 @@
         </section>
     </div>
 </div>
+<script src="../js/profile.js"></script>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
