--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -3,380 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Story Detail | Bloggo</title>
+    <title>Story Detail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        :root {
-            --glass-light: rgba(255, 255, 255, 0.2);
-            --glass-medium: rgba(255, 255, 255, 0.15);
-            --glass-dark: rgba(255, 255, 255, 0.1);
-            --glass-border: rgba(255, 255, 255, 0.3);
-            --glass-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-            --primary-gradient: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            --accent-color: #7c3aed;
-            --text:#1f2937;
-            --border:#e5e7eb; /* gray-200 */
-            --shadow: 0 10px 30px rgba(2,6,23,.08);
-        }
+    <link rel="stylesheet" href="../css/story-details.css">
 
-        body {
-            background: var(--primary-gradient);
-            font-family: "Inter", sans-serif;
-            color: #010205;
-            min-height: 100vh;
-            padding-bottom: 2rem;
-        }
-
-        /* Glass Effects */
-        .glass-container {
-            background: var(--glass-light);
-            backdrop-filter: blur(12px) saturate(180%);
-            -webkit-backdrop-filter: blur(12px) saturate(180%);
-            border: 1px solid var(--glass-border);
-            border-radius: 20px;
-            box-shadow: var(--glass-shadow);
-            padding: 1.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .glass-thin {
-            background: var(--glass-medium);
-            backdrop-filter: blur(10px) saturate(160%);
-            -webkit-backdrop-filter: blur(10px) saturate(160%);
-            border: 1px solid var(--glass-border);
-            border-radius: 16px;
-            box-shadow: var(--glass-shadow);
-        }
-
-        /* Navbar */
-        .glass-navbar {
-            position: sticky;
-            top: 1rem;
-            z-index: 1050;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 1rem 2rem;
-            margin: 0 auto;
-            width: 60%;
-            border-radius: 20px;
-            margin-top: 1rem;
-            margin-bottom: 2rem;
-            background: rgba(255, 255, 255, 0.15);
-            backdrop-filter: blur(16px) saturate(180%);
-            -webkit-backdrop-filter: blur(16px) saturate(180%);
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-        }
-
-        .glass-navbar a {
-            color: #000000;
-            font-weight: 500;
-            margin: 0 1.2rem;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            padding: 0.5rem 1rem;
-            border-radius: 12px;
-        }
-
-        .glass-navbar a:hover {
-            background: rgba(255, 255, 255, 0.2);
-            transform: translateY(-2px);
-        }
-
-        .navbar-brand {
-            font-weight: 700;
-            font-size: 1.5rem;
-            color: #000000;
-            letter-spacing: 2px;
-            margin-right: 2rem;
-            user-select: none;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            padding-top: 5px;
-            padding-bottom: 5px;
-        }
-
-        /* Story Content */
-        .story-header {
-            text-align: center;
-            padding: 2rem 0;
-        }
-
-        .story-title {
-            font-size: 2.8rem;
-            font-weight: 700;
-            margin-bottom: 1rem;
-            text-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .story-meta {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 1.5rem;
-            margin-bottom: 1.5rem;
-            flex-wrap: wrap;
-        }
-
-        .author-info {
-            display: flex;
-            align-items: center;
-            gap: 0.8rem;
-        }
-
-        .author-info img {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid rgba(255, 255, 255, 0.3);
-        }
-
-        .story-stats {
-            display: flex;
-            gap: 1.2rem;
-        }
-
-        .stat {
-            display: flex;
-            align-items: center;
-            gap: 0.4rem;
-            font-size: 0.9rem;
-        }
-
-        .story-image {
-            width: 100%;
-            height: 400px;
-            object-fit: cover;
-            border-radius: 20px;
-            margin: 1.5rem 0;
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
-        }
-
-        .story-content {
-            line-height: 1.8;
-            font-size: 1.1rem;
-        }
-
-        .story-content p {
-            margin-bottom: 1.5rem;
-        }
-
-        /* Interactions */
-        .interactions {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-            margin: 2rem 0;
-        }
-
-        .interaction-btn {
-            background:#fff;
-            border:1px solid var(--border);
-            color:var(--text);
-            padding:10px 16px;
-            border-radius:999px;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-
-        .interaction-btn:hover, .interaction-btn.active {
-            transform:translateY(-1px);
-            box-shadow:var(--shadow)
-        }
-
-        .interaction-btn.active.like-btn {
-            color: #ff6b6b;
-        }
-
-        .interaction-btn.active.bookmark-btn {
-            color: #ffe066;
-        }
-
-        .interaction-btn.active.boost-btn {
-            color: #7c3aed;
-        }
-
-        /* Comments Section */
-        .comments-header {
-            margin-bottom: 1.5rem;
-            display: flex;
-            align-items: center;
-            gap: 0.8rem;
-        }
-
-        .comment {
-            display: flex;
-            gap: 1rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .comment img {
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid rgba(255, 255, 255, 0.2);
-        }
-
-        .comment-content {
-            flex: 1;
-        }
-
-        .comment-header {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 0.5rem;
-        }
-
-        .comment-actions {
-            display: flex;
-            gap: 1rem;
-            margin-top: 0.5rem;
-        }
-
-        .comment-action {
-            font-size: 0.85rem;
-            color: rgba(255, 255, 255, 0.7);
-            transition: color 0.2s;
-            cursor: pointer;
-        }
-
-        .comment-action:hover {
-            color: white;
-        }
-
-        .comment-action.active {
-            color: #ff6b6b;
-        }
-
-        .add-comment {
-            display: flex;
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-
-        .add-comment img {
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            object-fit: cover;
-
-        }
-
-        .add-comment-input {
-            flex: 1;
-            border:1px solid var(--border);
-            background:#fff;
-            border-radius: 16px;
-            padding: 1rem;
-            color: #000000;
-            resize: none;
-        }
-
-        .add-comment-input::placeholder {
-            color: rgb(1, 2, 5);
-        }
-
-        .add-comment-btn {
-            align-self: flex-end;
-            background:#fff;
-            border:1px solid var(--border);
-            color:var(--text);
-            padding:10px 16px;
-            border-radius:999px;
-            font-weight: 500;
-            transition: all 0.3s ease;
-        }
-
-        .add-comment-btn:hover {
-            transform:translateY(-1px);
-            box-shadow:var(--shadow)
-        }
-
-        /* Story Actions */
-        .story-actions {
-            display: flex;
-            justify-content: flex-end;
-            gap: 0.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .action-btn {
-            padding: 0.5rem 1rem;
-            border-radius: 12px;
-            font-weight: 500;
-            border: none;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            transition: all 0.3s ease;
-        }
-
-        .edit-btn {
-            background-color: #ffc107;
-            color: #000;
-        }
-
-        .edit-btn:hover {
-            background-color: #e0a800;
-            transform: translateY(-2px);
-        }
-
-        .delete-btn {
-            background-color: #dc3545;
-            color: #fff;
-        }
-
-        .delete-btn:hover {
-            background-color: #c82333;
-            transform: translateY(-2px);
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .glass-navbar {
-                flex-wrap: wrap;
-                padding: 0.8rem;
-                width: 90%;
-            }
-
-            .glass-navbar a {
-                margin: 0.3rem;
-                font-size: 0.9rem;
-            }
-
-            .story-title {
-                font-size: 2rem;
-            }
-
-            .story-meta {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .story-image {
-                height: 250px;
-            }
-
-            .add-comment {
-                flex-direction: column;
-            }
-
-            .interactions {
-                flex-wrap: wrap;
-            }
-
-            .story-actions {
-                justify-content: center;
-            }
-        }
-    </style>
 </head>
 <body>
 
@@ -402,8 +34,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="stories.html">
-                        <i class="fas fa-pen-nib me-2"></i> Stories
+                    <a class="dropdown-item" href="saved-bookmarks.html">
+                        <i class="fas fa-bookmark me-2"></i> My Library
                     </a>
                 </li>
                 <li>
@@ -418,7 +50,7 @@
                 </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
-                    <a class="dropdown-item text-danger" href="logout.html">
+                    <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
                         <i class="fas fa-sign-out-alt me-2"></i> Logout
                     </a>
                 </li>
@@ -451,7 +83,6 @@
 
                         <div class="story-stats">
                             <div class="stat"><i class="far fa-clock"></i> <span id="readingTime">5 min</span> read</div>
-                            <div class="stat"><i class="far fa-eye"></i> <span id="viewCount">1.2k</span> views</div>
                             <div class="stat"><i class="far fa-calendar"></i> <span id="publishDate">Aug 24, 2025</span></div>
                         </div>
                     </div>
@@ -471,10 +102,6 @@
                     </button>
                     <button class="interaction-btn bookmark-btn" id="bookmarkBtn">
                         <i class="far fa-bookmark"></i> Save
-                    </button>
-                    <button class="interaction-btn like-btn" id="likeBtn">
-                        <i class="far fa-heart"></i>
-                        <span id="likeCount">0</span>
                     </button>
                 </div>
             </div>
@@ -539,5 +166,7 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/story-details.js"></script>
+<script src="../js/profile.js"></script>
+
 </body>
 </html>
