Implemented user profile updates and settings.  with loading functionality

--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -68,6 +68,13 @@
     </nav>
 </header>
 
+<!-- Loading Spinner -->
+<div id="loading" class="loading-overlay d-none">
+    <div class="spinner"></div>
+    <p>Loading dashboard...</p>
+</div>
+
+
 <!-- Search Section -->
 <section class="search-section mb-8">
     <div class="input-group shadow-sm rounded-pill">
