--- a/BloggoFrontend/pages/settings.html
+++ b/BloggoFrontend/pages/settings.html
@@ -66,6 +66,15 @@
     </nav>
 </header>
 
+<!-- Loading overlay -->
+<div id="loading">
+    <div class="loading-box">
+        <div class="spinner"></div>
+        <p>Loading user data...</p>
+    </div>
+</div>
+
+
     <div class="settings-wrapper">
     <!-- Sidebar -->
     <aside class="settings-sidebar">
@@ -75,7 +84,8 @@
         <a href="#membership">Membership</a>
     </aside>
 
-    <!-- Main Content -->
+
+        <!-- Main Content -->
     <div class="settings-content">
         <!-- Profile Settings -->
         <section class="settings-section" id="profile">
@@ -160,7 +170,6 @@
         </section>
     </div>
 </div>
-<script src="../js/profile.js"></script>
 <script src="../js/settings.js"></script>
 
 <!-- Bootstrap JS -->
