Implemented with loading functionality in story dashboard and story details

--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -59,6 +59,13 @@
     </nav>
 </header>
 
+<!-- Loading Spinner -->
+<div id="loading" class="loading-overlay d-none">
+    <div class="spinner"></div>
+    <p>Loading dashboard...</p>
+</div>
+
+
 <main class="container mt-4">
     <div class="row">
         <!-- Story Content Column -->
