--- a/BloggoFrontend/pages/stories.html
+++ b/BloggoFrontend/pages/stories.html
@@ -64,6 +64,12 @@
     </nav>
 </header>
 
+<!-- Loading Spinner -->
+<div id="loading" class="loading-overlay d-none">
+    <div class="spinner"></div>
+    <p>Loading dashboard...</p>
+</div>
+
 <div class="container mt-3">
     <div class="row mt-3">
         <!-- Main Feed -->
